--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <title>Mikuhu project</title>
     <!-- shake -->
-    <link rel="stylesheet" type="text/css" href="http://csshake.surge.sh/csshake.min.css">
+    <link rel="stylesheet" type="text/css" href="css/csshake.min.css">
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
