--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
 </head>
 
 <body id="page-top">
-
     <nav id="mainNav" class="navbar navbar-default navbar-fixed-top ">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -53,10 +52,13 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="#portfolio">Gallery</a>
+                        <a class="page-scroll" href="#portfolio" style="font-size: xx-large;">Gallery</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Find me</a>
+                        <a class="page-scroll" href="#contact" style="font-size: xx-large;">Find me</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll glyphicon glyphicon-eye-close" href="#" style="font-size: xx-large;"></a>
                     </li>
                 </ul>
             </div>
@@ -66,6 +68,9 @@
     </nav>
 
     <header>
+
+    <span class="glyphicon glyphicon-th-large"></span>
+
         <div class="header-content">
             <div class="header-content-inner">
                 
