--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <!-- favicon -->
+    <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
 
 </head>
 
