--- a/index.html
+++ b/index.html
@@ -105,17 +105,17 @@
     <!-- Images gallery block -->
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
-            <div class="row no-gutter popup-gallery">
+            <div class="row no-gutter">
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/1.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/1.jpg" class="img-responsive" alt="">
+                    <a href="guys.html" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/1.jpg" class="img-responsive hvr-bounce-in" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
+                                <div class="project-category text-faded shake-opacity">
+                                    Guys
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Photosets of people
                                 </div>
                             </div>
                         </div>
@@ -126,11 +126,11 @@
                         <img src="img/portfolio/thumbnails/2.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
+                                <div class="project-category text-faded shake-opacity">
+                                    Junk
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Like but don't know why
                                 </div>
                             </div>
                         </div>
@@ -141,11 +141,11 @@
                         <img src="img/portfolio/thumbnails/3.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
+                                <div class="project-category text-faded shake-opacity">
+                                    Night
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Inspires me a lot
                                 </div>
                             </div>
                         </div>
@@ -156,41 +156,41 @@
                         <img src="img/portfolio/thumbnails/4.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
+                                <div class="project-category text-faded shake-opacity">
+                                    Views
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Classical views
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
+                                <div class="col-lg-4 col-sm-6">
                     <a href="img/portfolio/fullsize/5.jpg" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/5.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
+                                <div class="project-category text-faded shake-opacity">
+                                    Guys
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Photosets of people
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
+                                <div class="col-lg-4 col-sm-6">
                     <a href="img/portfolio/fullsize/6.jpg" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/6.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
+                                <div class="project-category text-faded shake-opacity">
+                                    Guys
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Photosets of people
                                 </div>
                             </div>
                         </div>
