--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </div>
         </div>
 
-        <a href="#portfolio" class="page-scroll "><span id="topDown" class="glyphicon glyphicon-triangle-bottom shake-slow shake-constant shake-constant--hover" aria-hidden="true"></span></a>
+        <a href="#portfolio" class="page-scroll "><span id="topDown" class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span></a>
     </header>
 
 
