--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
 
 <head>
-    <!--
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <meta name="author" content=""> -->
+    <meta name="author" content="">
 
     <title>Mikuhu project</title>
     <!-- shake -->
@@ -44,10 +43,10 @@
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
+                <button type="button" class="navbar-toggle collapsed" style="font-size: x-large;" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only" >Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">
+                <a class="navbar-brand page-scroll" href="#page-top" style="margin: 8px;">
                     Mikuhu
                 </a>
             </div>
@@ -56,13 +55,10 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="#portfolio" style="font-size: xx-large;">Gallery</a>
+                        <a class="page-scroll" href="#portfolio" style="font-size: x-large;">Gallery</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact" style="font-size: xx-large;">Find me</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll glyphicon glyphicon-eye-close" href="#" style="font-size: xx-large;"></a>
+                        <a class="page-scroll" href="#contact" style="font-size: x-large;">Find me</a>
                     </li>
                 </ul>
             </div>
@@ -73,31 +69,17 @@
 
     <header>
 
-        <span class="glyphicon glyphicon-th-large"></span>
-
         <div class="header-content">
             <div class="header-content-inner">
 
                 <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 
-                <div class="content">
-                    <div class="content__container">
-                        <h2 class="content__container__text" style="font-size: 38px; font-family: fantasy;"> Hello</h2>
-
-                        <ul class="content__container__list">
-                            <li class="content__container__list__item">world !</li>
-                            <li class="content__container__list__item">Pasha !</li>
-                            <li class="content__container__list__item">users !</li>
-                            <li class="content__container__list__item">everybody !</li>
-                        </ul>
-                    </div>
-                </div>
-
 
             </div>
         </div>
-
+        
         <a href="#portfolio" class="page-scroll "><span id="topDown" class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span></a>
+
     </header>
 
 
@@ -210,9 +192,9 @@
                     <hr class="primary">
                     <br><br>
                 </div>
-                <div class="col-sm-4 shake-opacity"><a href="https://vk.com/mikuhu"><img src="../img/social/vk.svg" alt=""></a></div>
-                <div class="col-sm-4 shake-opacity"><a href="https://www.instagram.com/km.se/"><img src="../img/social/instagram.svg" alt=""></a></div>
-                <div class="col-sm-4 shake-opacity"><a href="https://www.youtube.com/user/applemuzuka"><img src="../img/social/youtube.svg" alt=""></a></div>
+                <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 shake-opacity"><a href="https://vk.com/mikuhu"><img src="../img/social/vk.svg" alt=""></a></div>
+                <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 shake-opacity"><a href="https://www.instagram.com/km.se/"><img src="../img/social/instagram.svg" alt=""></a></div>
+                <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 shake-opacity"><a href="https://www.youtube.com/user/applemuzuka"><img src="../img/social/youtube.svg" alt=""></a></div>
 
 
             </div>
