--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </div>
         </div>
         
-        <a href="#portfolio" class="page-scroll "><span id="topDown" class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span></a>
+        <a href="#portfolio" class="page-scroll "><div id="topDown" class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></div></a>
 
     </header>
 
