--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                     <br><br>
                 </div>
                 <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 shake-opacity"><a href="https://vk.com/mikuhu"><img src="../img/social/vk.svg" alt=""></a></div>
-                <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 shake-opacity"><a href="https://www.instagram.com/mike_nights/"><img src="../img/social/instagram.svg" alt=""></a></div>
+                <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 shake-opacity"><a href="https://www.instagram.com/km.se/"><img src="../img/social/instagram.svg" alt=""></a></div>
                 <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 shake-opacity"><a href="https://www.youtube.com/user/applemuzuka"><img src="../img/social/youtube.svg" alt=""></a></div>
 
 
