--- a/index.html
+++ b/index.html
@@ -34,11 +34,18 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
     <!-- favicon -->
-    <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
+    <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
 
 </head>
 
 <body id="page-top">
+    <!-- start preloader div -->
+    <div class="loaderArea">
+        <div class="loader"></div>
+    </div>
+    <!-- end preloader div -->
+
+
     <nav id="mainNav" class="navbar navbar-default navbar-fixed-top ">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -75,8 +82,10 @@
 
             </div>
         </div>
-        
-        <a href="#portfolio" class="page-scroll "><div id="topDown" class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></div></a>
+
+        <a href="#portfolio" class="page-scroll ">
+            <div id="topDown" class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></div>
+        </a>
 
     </header>
 
@@ -146,7 +155,7 @@
                         </div>
                     </a>
                 </div>
-                                <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-4 col-sm-6">
                     <a href="guys.html" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/5.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -161,7 +170,7 @@
                         </div>
                     </a>
                 </div>
-                                <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-4 col-sm-6">
                     <a href="guys.html" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/6.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -204,6 +213,16 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+
+    <script>
+        $(window).on('load', function () {
+            $preloader = $('.loaderArea'),
+                $loader = $preloader.find('.loader');
+            $loader.fadeOut();
+            $preloader.delay(350).fadeOut('slow');
+        });
+
+    </script>
 
     <!-- Plugin JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
