--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             <li class="active"><a href="#hero-area"><i class="fa fa-home"></i> Главная</a></li>
                             <li><a href="#services"><i class="fa fa-cogs"></i> Особенности</a></li>
                             <li><a href="#portfolio"><i class="fa fa-picture-o"></i> Галерея</a></li>
-                            <li><a href="#clients"><i class="fa fa-id-badge"></i> Отзывы</a></li>
+                            <li><a href="#clients"><i class="fa fa-thumbs-o-up"></i> Отзывы</a></li>
                             <li><a href="#map"><i class="fa fa-map-marker"></i> На карте</a></li>
                             <li><a href="#about"><i class="fa fa-info"></i> О нас</a></li>
                             <li><a href="#contact"><i class="fa fa-phone"></i> На связи</a></li>
@@ -108,7 +108,7 @@
     <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
     <div class="service-item">
     <!-- <img src="assets/img/services/responsive.png" alt=""> -->
-    <i class="fa fa-info  fa-5x" aria-hidden="true"></i>
+    <i class="fa fa-home  fa-5x" aria-hidden="true"></i>
     <h3>Уютно</h3>
     <p>Жилое помещение состоит из нескольких уютных и вместительных капсул, в которых есть все необходимое для комфортного отдыха.</p>
     </div>
