--- a/index.html
+++ b/index.html
@@ -199,10 +199,10 @@
                     <hr class="primary">
                     <br><br>
                 </div>
-                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 shake-opacity"><a href="https://vk.com/mikuhu"><img src="../img/social/vk.svg" alt=""></a></div>
-                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 shake-opacity"><a href="https://www.instagram.com/km.se/"><img src="../img/social/instagram.svg" alt=""></a></div>
-                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 shake-opacity"><a href="https://www.youtube.com/user/applemuzuka"><img src="../img/social/youtube.svg" alt=""></a></div>
-                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 shake-opacity"><a href="https://twitter.com/mikuhu"><img src="../img/social/twitter.svg" alt=""></a></div>
+                <!-- <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 shake-opacity"><a href="https://vk.com/mikuhu"><img src="../img/social/vk.svg" alt=""></a></div>
+                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 shake-opacity"><a href="https://www.instagram.com/km.se/"><img src="../img/social/instagram.svg" alt=""></a></div> -->
+                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 shake-opacity"><a href="https://www.youtube.com/user/applemuzuka"><img src="../img/social/youtube.svg" alt=""></a></div>
+                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 shake-opacity"><a href="https://twitter.com/mikuhu"><img src="../img/social/twitter.svg" alt=""></a></div>
 
             </div>
         </div>
